@@ -17078,6 +17078,9 @@ Max lookbehind = 5
 May match empty string
 Subject length lower bound = 0
 
+/( {32742} {42})(?<!\1{65481})/
+Failed: error 187 at offset 15: lookbehind assertion is too long
+
 # End of testinput2
 Error -70: PCRE2_ERROR_BADDATA (unknown error number)
 Error -62: bad serialized data
